View Support, Performance